--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ html {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 #nav {
@@ -112,6 +113,33 @@ html {
 
 #slider {
   margin-top: 46px;
+  padding-top: 50%;
+  background-image: url(../img/slider/slider1.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  position: relative;
+  
+}
+
+#slider .text-content{
+  position: absolute;
+  bottom: 47px;
+  /* left: 50%;
+  transform: translateX(-50%); */
+  color: #fff;
+  width: 100%;
+  text-align: center;
+}
+
+#slider .text-heading {
+  font-weight: 500;
+  font-size: 24px;
+}
+
+#slider .text-desciption {
+  font-size: 15px;
+  margin-top: 25px;
 }
 
 #footer {
