--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,14 @@ html {
 4. Kiểu dáng (kiểu chữ, hình tròn, hình vuông,...)
 */
 
+.clear {
+  clear: both;
+}
+
+.text-white {
+  color: #fff !important;
+}
+
 #main {
 }
 
@@ -142,8 +150,148 @@ html {
   margin-top: 25px;
 }
 
-#footer {
+#content {
 }
 
-#content {
+#content .content-section {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 64px 0;
+}
+
+#content .section-heading {
+  font-size: 30px;
+  text-align: center;
+  letter-spacing: 4px;
+  font-weight: 500;
+}
+
+#content .section-sub-heading {
+  margin-top: 25px;
+  text-align: center;
+  font-size: 15px;
+  font-style: italic;
+  opacity: 0.6;
+}
+
+#content .members-list {
+  margin-top: 48px;
+}
+
+#content .about-text {
+  margin-top: 25px;
+  font-size: 15px;
+  text-align: justify;
+  line-height: 1.4;
+}
+
+#content .member-item {
+  float: left;
+  width: 33.33333%;
+  text-align: center;
+}
+
+#content .member-name {
+  font-size: 15px;
+}
+
+#content .member-img {
+  width: 154px;
+  margin-top: 15px;
+  border-radius: 4px;
+}
+
+.tour-section {
+  background-color: #000;
+}
+
+.tickets-list {
+  background-color: #fff;
+  margin-top: 40px;
+  list-style-type: none;
+}
+
+.tickets-list li {
+  font-size: 15px;
+  padding: 11px 16px;
+  border-bottom: 1px solid #ddd;
+  color: #757575;
+}
+
+.tickets-list .sold-out {
+  background-color: #f44336;
+  color: #fff;
+  padding: 3px 4px;
+  margin-left: 16px;
+}
+
+.tickets-list .quantity {
+  float: right;
+  width: 24px;
+  height: 24px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 24px;
+  margin-top: -3px;
+}
+
+.places-list {
+  margin: 32px -8px 0;
+  padding-bottom: 48px;
+}
+
+.place-item {
+  float: left;
+  width: 33.3333%;
+  padding: 0 8px;
+}
+
+.place-img {
+  width: 100%;
+  display: block;
+}
+
+.place-img:hover {
+  opacity: 0.6;
+}
+
+.place-body {
+  background-color: #fff;
+  padding: 16px;
+  font-size: 15px;
+}
+
+.place-heading {
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.place-time {
+  margin-top: 15px;
+  color: #757575;
+}
+
+.place-desc {
+  margin-top: 15px;
+  line-height: 1.4;
+}
+
+.place-buy-btn {
+  color: #fff;
+  background-color: #000;
+  text-decoration: none;
+  padding: 11px 16px;
+  display: inline-block;
+  margin-top: 15px;
+}
+
+.place-buy-btn:hover {
+  color: #000;
+  background-color: #ccc;
+}
+
+#footer {
 }
