--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 }
 
 html {
+  scroll-behavior: smooth;
   font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -213,9 +214,10 @@ html {
 
 #content .content-section {
   width: 800px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 64px 0 112px;
+  padding: 64px 16px 112px 16px;
 }
 
 #content .section-heading {
@@ -366,6 +368,7 @@ html {
   color: rgba(0, 0, 0, 0.6);
   text-decoration: none;
 }
+
 #footer .copyright a:hover,
 #footer .socials-list a:hover {
   color: rgba(0, 0, 0, 0.4);
@@ -450,6 +453,7 @@ html {
   padding: 10px;
   font-size: 15px;
   margin-bottom: 24px;
+  outline-color: #2196f3;
 }
 
 #buy-tickets {
@@ -487,3 +491,9 @@ html {
     transform: translateY(0);
   }
 }
+
+/* 
+  PC: >= 1024px
+  Tablet: >= 740 px && < 1024px
+  Mobile: < 740px
+*/
