--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ html {
   left: 0;
   right: 0;
   z-index: 1;
+  overflow: hidden;
 }
 
 #nav {
@@ -163,16 +164,26 @@ html {
   font-size: 14px;
 }
 
-#header .search-btn {
+#header .search-btn,
+#header .mobile-menu-btn {
   float: right;
   padding: 0 21px;
-  cursor: pointer;
+}
+
+#header .mobile-menu-btn:hover {
+  background-color: #ccc;
+}
+
+#header .mobile-menu-btn:hover .menu-icon {
+  color: #000;
 }
 
 #header .search-btn:hover {
   background-color: #f44336;
+  cursor: pointer;
 }
 
+#header .menu-icon,
 #header .search-icon {
   color: #fff;
   font-size: 20px;
