--- a/assets/css/response.css
+++ b/assets/css/response.css
@@ -4,11 +4,42 @@
 
 /* Tablet */
 @media (min-width: 740px) and (max-width: 1023px) {
+  
 }
 
 /* Mobile */
 @media (max-width: 740px) {
+  #nav {
+    display: block;
+  }
+
   #nav > li {
+    display: block;
+  }
+
+  #nav .subnav {
+    position: initial;
+    background-color: #333;
+  }
+
+  #nav .subnav a {
+    color: #fff;
+    padding: 5px 41px;
+  }
+
+  #nav > li:first-child {
+    display: inline-block;
+  }
+
+  #nav li a {
+    padding: 1px 24px;
+  }
+
+  #header {
+    overflow: hidden;
+  }
+
+  #header .mobile-menu-btn {
     display: block;
   }
 
