--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,6 @@ html {
   left: 0;
   right: 0;
   z-index: 1;
-  overflow: hidden;
 }
 
 #nav {
@@ -162,6 +161,13 @@ html {
 
 #nav .nav-arrow-down {
   font-size: 14px;
+}
+
+#header .mobile-menu-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: none;
 }
 
 #header .search-btn,
