--- a/assets/css/response.css
+++ b/assets/css/response.css
@@ -1,14 +1,50 @@
 /* PC */
-@media (min-width: 1024px) {
+@media (min-width: 64em) {
+}
+
+/* Tablet & mobile */
+@media (max-width: 63.9375em) {
+  .btn {
+    padding: 15px 16px;
+  }
+
+  .contact-form .form-control {
+    padding: 15px;
+    font-size: 16px;
+  }
+
+  .socials-list {
+    font-size: 48px;
+  }
+
+  #footer .socials-list a {
+    margin: 0 8px;
+  }
+
+  #footer .copyright a {
+    padding: 12px 0;
+    display: inline-block;
+  }
+
+  #nav .subnav a {
+    padding: 5px 12px;
+  }
+
+  .contact-info {
+    line-height: 2;
+  }
+
+  .contact-submit-btn {
+    font-size: 16px;
+  }
 }
 
 /* Tablet */
-@media (min-width: 740px) and (max-width: 1023px) {
-  
+@media (min-width: 46.25em) and (max-width: 63.9375em) {
 }
 
 /* Mobile */
-@media (max-width: 740px) {
+@media (max-width: 46.1875em) {
   #nav {
     display: block;
   }
@@ -45,5 +81,22 @@
 
   #header .search-btn {
     display: none;
+  }
+
+  #content .member-img {
+    width: 60%;
+  }
+
+  .s-col-full,
+  .s-full-width {
+    width: 100% !important;
+  }
+
+  #contact .contact-form {
+    margin-top: 32px;
+  }
+
+  .s-mt-8 {
+    margin-top: 8px !important;
   }
 }
