--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,10 @@ html {
   margin-top: 16px !important;
 }
 
+.mt-32 {
+  margin-top: 32px !important;
+}
+
 .btn {
   color: #fff;
   background-color: #000;
@@ -79,6 +83,9 @@ html {
   margin-top: 15px;
   border: none;
   cursor: pointer;
+  text-align: center;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .btn:hover {
@@ -224,6 +231,7 @@ html {
 #slider .text-desciption {
   font-size: 15px;
   margin-top: 25px;
+  text-shadow: 0 0 1px #000;
 }
 
 #content {
@@ -253,7 +261,7 @@ html {
 }
 
 #content .members-list {
-  margin-top: 48px;
+  margin-top: 32px;
 }
 
 #content .about-text {
@@ -310,7 +318,7 @@ html {
 }
 
 .places-list {
-  margin-top: 32px;
+  margin-top: 16px;
 }
 
 .place-img {
@@ -350,6 +358,15 @@ html {
 .contact-info {
   font-size: 18px;
   line-height: 1.5;
+}
+
+.contact-info a {
+  color: #101aef;
+  opacity: 0.8;
+}
+
+.contact-info a:hover {
+  opacity: 1;
 }
 
 .contact-info i[class*="ti-"] {
